pyk/src/tests/unit/kore/test-data/definitions/pass/test-pattern-14.kore
[]

module TEST-PATTERN-14

  axiom{S}
    \next{S}(X:S) []

endmodule []
