pyk/src/tests/unit/kore/test-data/definitions/should-fail/test-exception-14.kore
[]

module TEST-EXCEPTION-14

  axiom{}
    f{S{}}() []

endmodule []
